--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7142,7 +7142,7 @@ button.close {
     padding-bottom: 20px;
     color: #fff;
     text-align: center;
-    text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+    text-shadow: 4px 1px 9px rgba(0, 0, 0, 1);
 }
 
 .carousel-caption .btn {
