--- a/css/sticky-footer.css
+++ b/css/sticky-footer.css
@@ -1,31 +1,35 @@
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
-}
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
+    position: relative;
+    min-height: 100%;
 }
 
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    text-align: center;
+}
 
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 
 .container {
-  width: auto;
-  max-width: 680px;
-  padding: 0 15px;
+    width: auto;
+    max-width: 680px;
+    padding: 0 15px;
 }
+
 .container .text-muted {
-  margin: 20px 0;
+    margin: 20px 0;
 }
