added photo gallery

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6606,7 +6606,7 @@ button.close {
 
 .modal-content {
     position: relative;
-    background-color: #fff;
+    background-color: #252424;
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
     border: 1px solid #999;
